<resources>
    <string name="app_name">Gerenciamento de Convidados</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>

    <string name="todos">Todos</string>
    <string name="total">Total</string>
    <string name="presentes">Presentes</string>
    <string name="ausentes">Ausentes</string>
    <string name="configuracoes">Configurações</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome</string>
    <string name="nao_confirmado">Não confirmado</string>
    <string name="presente">Presente</string>
    <string name="ausente">Ausente</string>
    <string name="salvar">Salvar</string>
    <string name="nome_obrigatorio">Nome é obrigatório</string>
    <string name="convidado_salvo_com_sucesso">Convidado salvo com sucesso!</string>
    <string name="erro_ao_salvar">Erro ao salvar</string>
    <string name="convidado_removido">Convidado removido com sucesso</string>
    <string name="ic_remove">ícone de remoção</string>
    <string name="title_remocao">Remoção de convidado</string>
    <string name="message_remove">Deseja remover o convidado?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="documento">Documento</string>
    <string name="gerenciamento_de_convidados">Gerenciamento de Convidados</string>
    <string name="logo">logo</string>
    <string name="confirmacao">Confirmação</string>
    <string name="Voltar" />
    <string name="cancelar">Cancelar</string>
</resources>
